--- a/iaq-ui/src/app/feature/chart-display/main-chart-display/date-selector/date-selector.component.html
+++ b/iaq-ui/src/app/feature/chart-display/main-chart-display/date-selector/date-selector.component.html
@@ -3,21 +3,20 @@
         <mat-form-field appearance="outline">
           <mat-label>Type</mat-label>
           <mat-select [formControl]="dateTypeForm" required>
-            <mat-option>--</mat-option>
             <mat-option *ngFor="let type of dateTypes" [value]="type">
               {{type}}
             </mat-option>
           </mat-select>
           <mat-error *ngIf="dateTypeForm.hasError('required')">Please choose a type</mat-error>
-          <mat-hint>{{dateTypeForm.value?.description}}</mat-hint>
+          <mat-hint>Select realtime or historic</mat-hint>
         </mat-form-field>
     </span>
     
     <span class="date-selector-item">
-      <app-realtime-date-selector *ngIf="dateTypeForm.value == 'realtime'" (timeSelected)="onTimeSelected($event)"></app-realtime-date-selector>
+      <app-realtime-date-selector #realtimeDateSelector *ngIf="dateTypeForm.value == 'realtime'" (timeSelected)="onTimeSelected($event)"></app-realtime-date-selector>
     </span>  
   
     <span class="date-selector-item">
-      <app-historic-date-selector *ngIf="dateTypeForm.value == 'historic'" (timeSelected)="onTimeSelected($event)"></app-historic-date-selector>
+      <app-historic-date-selector #historicDateSelector *ngIf="dateTypeForm.value == 'historic'" (timeSelected)="onTimeSelected($event)"></app-historic-date-selector>
     </span>
 </div>
