--- a/iaq-ui/src/app/feature/chart-display/main-chart-display/main-chart-display.component.sass
+++ b/iaq-ui/src/app/feature/chart-display/main-chart-display/main-chart-display.component.sass
@@ -1,17 +1,6 @@
-@use 'sass:map'
-@use '@angular/material' as mat
-@import '~@angular/material/theming'
-@include mat-core()
-
-$primary: mat-palette($mat-indigo)
-$accent:  mat-palette($mat-yellow)
-$warn:    mat-palette($mat-red)
-
-$theme: mat-light-theme($primary, $accent, $warn)
-
 .chart-display-root-container
     position: relative
-    border: 2.5px solid mat-color($primary)
+    border: 2.5px solid blue
     border-style: groove
     border-radius: 1em
     margin: 1em
