--- a/iaq-ui/src/app/feature/dashboard/navbar/navbar.component.html
+++ b/iaq-ui/src/app/feature/dashboard/navbar/navbar.component.html
@@ -4,5 +4,22 @@
     </button>
     <span>Monitoring</span>
     <span class="nav-spacer"></span>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">account_circle</mat-icon>
+  
+    <!-- toolbar options -->
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="toolbar options">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    
+    <mat-menu #menu="matMenu">
+      
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>account_circle</mat-icon>
+        <span>{{authService.getUserEmail()}}</span>
+      </button>
+
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>logout</mat-icon>
+        <span>Log Out</span>
+      </button>
+    </mat-menu>
 </mat-toolbar>
