--- a/iaq-ui/src/app/feature/chart-display/main-chart-display/station-selector/station-selector.component.html
+++ b/iaq-ui/src/app/feature/chart-display/main-chart-display/station-selector/station-selector.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline">
-    <mat-label>Estaciones</mat-label>
+    <mat-label>Stations</mat-label>
     <mat-select [formControl]="stationForm" multiple>
         <mat-option *ngFor="let station of stations" [value]="station">{{station.name}}</mat-option>
     </mat-select>
