--- a/iaq-ui/src/app/feature/chart-display/main-chart-display/date-selector/historic-date-selector/historic-date-selector.component.html
+++ b/iaq-ui/src/app/feature/chart-display/main-chart-display/date-selector/historic-date-selector/historic-date-selector.component.html
@@ -2,18 +2,22 @@
     <mat-form-field appearance="outline">
         <mat-label>Enter a date range</mat-label>
         <mat-date-range-input [formGroup]="dateRangeForm" [rangePicker]="picker">
-        <input matStartDate formControlName="start" placeholder="Start date">
-        <input matEndDate formControlName="end" placeholder="End date">
+          <input matStartDate formControlName="start" placeholder="Start date" >
+          <input matEndDate formControlName="end" placeholder="End date" >
         </mat-date-range-input>
         <!-- todo: possibly set time here -->
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-hint>MM/DD/YYYY - MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
-        
-        <!--
-        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-        -->
+
+        <mat-date-range-picker #picker>
+          <mat-date-range-picker-actions>
+            <button mat-button matDateRangePickerCancel>Cancel</button>
+            <button mat-raised-button color="primary" matDateRangePickerApply>Apply</button>
+          </mat-date-range-picker-actions>
+        </mat-date-range-picker>
+
+        <mat-error *ngIf="dateRangeForm.controls['start'].hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="dateRangeForm.controls['end'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
     </mat-form-field>
 </span>
 
