general refactor, console.log deletion

--- a/iaq-ui/src/app/feature/dashboard/navbar/navbar.component.html
+++ b/iaq-ui/src/app/feature/dashboard/navbar/navbar.component.html
@@ -1,8 +1,5 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon"  aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Monitoring</span>
+    <span>Indoor Air Monitoring</span>
     <span class="nav-spacer"></span>
   
     <!-- toolbar options -->
